--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,10 @@ subprojects {
 
         // test
         testImplementation 'org.junit.jupiter:junit-jupiter:5.4.1'
+        testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.18.3'
+        
         testCompile 'org.springframework.boot:spring-boot-starter-test'
+        testCompile 'org.springframework.security:spring-security-test'
     }
 
     test {
